# min-rs

./: Cargo.toml  README.md
examples/: communicate.rs  multithread.rs  no_transport.rs  real_uart_on_linux.rs  transport.rs
examples/arduino/: arduino.ino
src/: context.rs  crc.rs  crc32.rs  interface.rs  lib.rs  transport.rs
tests/: integration_test.rs  no_transport_test.rs  transport_test.rs
