[package]
name = "min-rs"
version = "0.1.0"
authors = ["qianchenzhumeng <qianchenzhumeng@live.cn>"]
description = "The MIN(Microcontroller Interconnect Network) protocol Rust Library."
edition = "2018"

[dependencies]
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
serial = { git = "https://github.com/qianchenzhumeng/serial-rs", branch="pi"}

[[example]]
name="multithread"

[[example]]
name="transport"

[[example]]
name="no_transport"

[[example]]
name="real_uart_on_linux"